# ma_first_pkg

./: .gitignore  README.md
include/custom_action_cpp/: fibonacci_action_server.hpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh
install/cpp_pubsub/lib/cpp_pubsub/: talker
install/cpp_pubsub/share/cpp_pubsub/: local_setup.sh  package.sh
install/cpp_srvcli/lib/cpp_srvcli/: client  server
install/cpp_srvcli/share/cpp_srvcli/: local_setup.sh  package.sh
install/first_interfaces/share/first_interfaces/: local_setup.sh  package.sh
install/first_interfaces/share/first_interfaces/cmake/: first_interfaces__rosidl_typesupport_cppExport.cmake  first_interfaces__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake
install/first_interfaces/share/first_interfaces/msg/: Sphere.idl
install/first_interfaces/share/first_interfaces/srv/: AddThreeInts.idl
install/pkg1/share/pkg1/: local_setup.sh  package.sh  package.xml
install/subs_pubs/install/: local_setup.sh  setup.ps1  setup.sh
install/subs_pubs/lib/subs_pubs/: talker
install/subs_pubs/log/: latest_build
install/subs_pubs/share/subs_pubs/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/subs_pubs/share/subs_pubs/cmake/: subs_pubsConfig.cmake
launch/: turtlesim_mimic_launch.py
log/: latest_build
src/cpp_parameters/: CMakeLists.txt  README.md  package.xml
src/cpp_parameters/src/: parameters_node.cpp
src/cpp_pubsub/: CMakeLists.txt
src/cpp_srvcli/: CMakeLists.txt
src/cpp_srvcli/src/: add_two_ints_client.cpp  add_two_ints_server.cpp
src/custom_action_cpp/: CMakeLists.txt  package.xml
src/custom_action_cpp/include/custom_action_cpp/: visibility_control.hpp
src/custom_action_cpp/src/: fibonacci_action_client.cpp  fibonacci_action_server.cpp
src/custom_action_interfaces/: CMakeLists.txt  package.xml
src/first_interfaces/: CMakeLists.txt
src/first_interfaces/install/: local_setup.sh  setup.sh  setup.zsh
src/first_interfaces/log/: latest_build
src/install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
src/install/SubsPubs/share/SubsPubs/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/install/cpp_pubsub/lib/cpp_pubsub/: talker
src/install/cpp_pubsub/share/cpp_pubsub/: package.sh
src/log/: latest_build  latest_list
src/pkg1/: CMakeLists.txt
src/polygon_base/: CMakeLists.txt  package.xml
src/polygon_base/include/polygon_base/: regular_polygon.hpp
src/polygon_base/src/: area_node.cpp
src/polygon_plugins/: package.xml  plugins.xml
src/polygon_plugins/src/: polygon_plugins.cpp
src/subs_pubs/: CMakeLists.txt
src/subs_pubs/src/: pubs.cpp  subs.cpp
(+70 files in other folders)
