<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>subs_pubs</name>
  <version>0.0.0</version>
  <description>COBAAA</description>
  <maintainer email="donennone@gmail.com">arta</maintainer>
  <license>Apache-2.0</license>
  <depend>rclcpp</depend>
  <depend>first_interfaces</depend>
  <build_depend>rosidl_default_generators</build_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
